--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "prisma": "^6.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "redux": "^5.0.1"
+    "react-icons": "^5.5.0",
+    "redux": "^5.0.1",
+    "swiper": "^11.2.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
